# Student-Bus-Tracker

./: .gitignore  build.gradle.kts
app/: build.gradle.kts  lint-baseline.xml
app/src/androidTest/java/com/uniguard/bustracker/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/uniguard/bustracker/: BusTracker.kt
app/src/main/java/com/uniguard/bustracker/app/: MainActivity.kt
app/src/main/java/com/uniguard/bustracker/core/data/model/: User.kt
app/src/main/java/com/uniguard/bustracker/core/data/repository/: UserRepositoryImpl.kt
app/src/main/java/com/uniguard/bustracker/core/di/: DataStoreModule.kt  NetworkModule.kt  RepositoryModule.kt
app/src/main/java/com/uniguard/bustracker/core/di/usecase/: UserUseCaseModule.kt
app/src/main/java/com/uniguard/bustracker/core/domain/: BaseUseCase.kt
app/src/main/java/com/uniguard/bustracker/helper/: HexUtil.kt  PasswdUtils.kt  ScanGunKeyEventHelper.kt  Scanner_Tools.kt  SderbUtils.kt
app/src/main/java/com/uniguard/bustracker/receivers/: AppStartReceiver.kt
app/src/main/java/com/uniguard/bustracker/ui/composable/: TextField.kt
app/src/main/java/com/uniguard/bustracker/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/gidb/com/: Sderb.kt
app/src/main/jni/: Android.mk  CMakeLists.txt  SerialPort.c  SerialPort.cpp
app/src/main/res/drawable/: ic_device.xml  ic_server.xml  uniguard_logo.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/uniguard/bustracker/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+10 files in other folders)
